Remove SyncTaskToken reboot and re-enable disabled SyncFileSystemTest

This CL removes auto-restart of SyncTaskManager. It used to restart
a chain of asynchronous task on an unexpected chaing breakage unless
the browser is in the shutdown sequence. However, as the shutdown
detection is unstable, that causes a restart loop.

Bug: 750800
Change-Id: I2ca231b84908f7c015b4cd97ad02a43f423b20e4
Reviewed-on: https://chromium-review.googlesource.com/597552
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Taiju Tsuiki <tzik@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491331}
Former-commit-id: d5c6448dc428ce9bb22cc14f8b45bf929cebadd6